--- a/src/h5/index.html
+++ b/src/h5/index.html
@@ -15,6 +15,7 @@
             <div class="body-content">
                   <!-- @@include ./m_slider.html -->
                    <!-- @@include ./m_nav.html -->
+                       <!-- @@include ./m_text-list.html -->
             </div>
         </div>
     </body>
@@ -27,12 +28,6 @@
             // 如果需要分页器
             pagination: {
             el: '.swiper-pagination',
-            },
-            
-            // 如果需要前进后退按钮
-            navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
             },
             
             // 如果需要滚动条
